<resources>
    <string name="app_name">TopQuiz</string>
    <string name="welcome">Welcome ! What\'s your name ?</string>
    <string name="enter_name">Please type your name</string>
    <string name="go">Let\'s play</string>
    <string name="question">Question</string>
    <string name="subject_math">Math</string>
    <string name="subject_color">Colors</string>
    <string name="subject_logic">Logical</string>
    <string name="subject_words">Words</string>
    <string name="chose_theme">Please choose a theme</string>
    <string name="welcome_back">"Welcome back "</string>
    <string name="last_score">Your last score was</string>
    <string name="better">Will you do better this time ?</string>
    <string name="go_back">Go back</string>
    <string name="well_done">Well Done !</string>
    <string name="show_score">Your score is </string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong answer</string>
</resources>
