<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.TypeChoiceActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/choose_theme_txt"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/chose_theme"
        android:textSize="25sp"></TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/choose_theme_math_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@color/colorButtons"
            android:text="@string/subject_math"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/choose_theme_colors_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@color/colorButtons"
            android:text="@string/subject_color"
            android:textSize="20sp"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center">

        <Button
            android:id="@+id/choose_theme_logical_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@color/colorButtons"
            android:text="@string/subject_logic"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/choose_theme_words_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@color/colorButtons"
            android:text="@string/subject_words"
            android:textSize="20sp"></Button>
    </LinearLayout>

    <Button
        android:id="@+id/go_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:layout_marginTop="120dp"></Button>

</LinearLayout>